feat: added footer

--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,12 @@ h1 {
 .image-2 {
     margin-left: 2rem;
 }
+
+footer img{
+    padding-left: 5rem;
+    display: inline-flex;
+}
+
+footer {
+      
+}
