--- a/styles.css
+++ b/styles.css
@@ -56,12 +56,21 @@ h1 {
     margin-left: 2rem;
 }
 
-footer img{
-    padding-left: 5rem;
+footer a:not(:first-child) {
+    margin-left: 5rem;
     display: inline-flex;
+}
+
+footer a {
+    display: flex;
 }
 
 footer {
       display: flex;
       justify-content: center;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
