--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,9 @@ a {
     text-decoration: none;
     color: white;
 }
+
+.heading-block {
+    display: flex;
+    justify-content: center;
+    font-size: xx-large;
+}
