feat: created blog main page and added 2 blogs

--- a/styles.css
+++ b/styles.css
@@ -107,3 +107,9 @@ a {
     border-radius: 8px;
     margin-left: 2rem;
 }
+
+.blog {
+    font-family: 'Montserrat', sans-serif;
+    margin-left:10%;
+    margin-right:10%;
+}
